--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.squareup.retrofit:retrofit:2.0.0-beta1'
     compile 'com.google.code.gson:gson:2.3.1'
+    compile 'com.google.android.gms:play-services-maps:7.8.0'
     compile files('libs/butterknife-7.0.1.jar')
     compile files('libs/gson-2.3.1.jar')
     compile files('libs/picasso-2.5.2.jar')
