--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     compile files('libs/gson-2.3.1.jar')
     compile files('libs/picasso-2.5.2.jar')
     compile files('libs/retrofit-2.0.0-beta1.jar')
+    compile 'com.android.support:support-v4:23.0.1'
 }
